<resources>
    <string name="app_name">RVLR AAU2</string>
    <string name="cipa_name">RVLR SOFT</string>
    <string name="cipa_info1">ROBERTO ANGULO</string>
    <string name="cipa_info2">VINCENT ROLONG</string>
    <string name="cipa_info3">LUIFER VILLA</string>
    <string name="cipa_info4">RUBEN HERNANDEZ</string>
    <string name="cipa_info5">MURIEL DIAZ</string>
    <string name="udc_logo">UDC Logo</string>
    <string name="appTitle">APP DE CONTACTO</string>
    <string name="menuItem1">Agregar Contacto</string>
    <string name="menuItem2">Lista de Contactos</string>
    <string name="menuItem3">Actualizar Contacto</string>
    <string name="menuItem4">Eliminar Contacto</string>
    <string name="titulo"></string>
    <string name="btnEj1">Ejercicio 1</string>
    <string name="btnEj2">Ejercicio 2</string>
    <string name="btnEj3">Ejercicio 3</string>
    <string name="btnEj4">Ejercicio 4</string>
    <string name="btnEj5">Ejercicio 5</string>
    <string name="TituloEjercicios">Ejercicios</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragEj1_input_placeholder">Ingrese el número a calcular</string>
    <string name="btnCalcular">Calcular</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Bienvendido</string>
    <string name="resultadoEj1">Resultado</string>
    <string name="ej1Title">Ejercicio 1</string>
    <string name="ejDescription">1. Desarrollar una Apps en Android que Calcule el Cubo de un Numero, si el número es mayor de 100, la aplicación mostrar un mensaje con Toast “Eres muy afortunado”</string>
    <string name="ej2Title">Ejercicio 2</string>
    <string name="ej2Description">2. Desarrollar una Aplicación en Android Que simule la tirada de Dos dados</string>
    <string name="ej3Title">Ejercicio 3</string>
    <string name="ej3Description">3. Desarrollar una Aplicación en Android que digitado una cadena de caracteres, tiene dos
opciones para imprimir: Normal o Al Reves</string>
    <string name="fragEj3_input_placeholder">Ingrese la cadena a transformar</string>
    <string name="btnNormal">Normal</string>
    <string name="btnAlreves">Al revés</string>
    <string name="ej4Title">Ejercicio 4</string>
    <string name="ej4Description">4. Desarrollar una Apps en Android que Digitado 5 Compras, Realice los siguientes Cálculos:
 El total de la compra
 El IVA de la compra
 Si la compra es superior a 100.000 realizar un descuento del 10%
 Calcule cual es la compra más alta
 Utilizar ScrollView Vertical, para desplazar verticalmente la pantalla</string>
    <string name="fragEj4_input_placeholder">Ingrese valor de la compra</string>
    <string name="btnAgregarCompra">Agregar compra</string>
    <string name="titleTableCompra">Compras</string>
    <string name="tableCompraRowNumber">#</string>
    <string name="tableCompraValor">Valor</string>
    <string name="tableCompraTotal">Total compras</string>
    <string name="tableComprasIva">IVA</string>
    <string name="tableComprasDescuento">Descuento</string>
    <string name="ej5Title">Ejercicio 5</string>
    <string name="ej5Description">Realizar un Crud (Agregar,Eliminar,Actualizar,Mostrar Información) En Android Studio
 Investigar ListView
 Agregarle Color Personalizado al Activity (Investigar)</string>
    <string name="contadorProgramasLabel">Cantidad de programas: </string>
    <string name="fragEj5_input_placeholder">Ingrese el nombre del programa</string>
    <string name="btnGuardarPrograma">Guardar</string>
    <string name="rbAgregar">Agregar</string>
    <string name="rbActualizar">Actualizar</string>
    <string name="rbEliminar">Eliminar</string>
</resources>