<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.Ej1Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <TextView
            android:id="@+id/ej1Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ej1Title"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ejDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ejDescription"
            android:justificationMode="inter_word"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/resultadoEj1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:layout_marginTop="10dp"
            android:text="@string/resultadoEj1"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/n"
            android:layout_width="244dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/fragEj1_input_placeholder"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btnCalcular" />

    </LinearLayout>

</FrameLayout>