<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Ej5Activity">


    <TextView
        android:id="@+id/titleEj5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:text="@string/ej5Title" />

    <TextView
        android:id="@+id/ej5Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center_horizontal"
        android:text="@string/ej5Description" />

    <EditText
        android:id="@+id/programa"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/fragEj5_input_placeholder"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <Button
        android:id="@+id/btnAgregarPrograma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btnAgregarPrograma" />

    <RadioGroup
        android:id="@+id/actiones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <RadioButton
            android:id="@+id/rbActualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbActualizar" />

        <RadioButton
            android:id="@+id/rbEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbEliminar" />
    </RadioGroup>

    <ListView
        android:id="@+id/listaProgramas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>