<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ej4Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ej4Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ej4Title"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ejDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ej4Description"
            android:gravity="center_horizontal"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"/>

        <EditText
            android:id="@+id/compra"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/fragEj4_input_placeholder"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAgregarCompra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="10dp"
                android:text="@string/btnAgregarCompra" />

            <Button
                android:id="@+id/btnCalcCompra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:text="@string/btnCalcular" />
        </LinearLayout>

        <TableLayout
            android:id="@+id/listaCompras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/titleTableCompra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/titleTableCompra"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>