<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.Ej3Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <TextView
            android:id="@+id/ej3Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ej3Title"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ejDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ej3Description"
            android:gravity="center_horizontal"
            android:layout_margin="25dp"/>

        <TextView
            android:id="@+id/resultadoEj3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:layout_marginTop="10dp"
            android:text="@string/resultadoEj1"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/cadena"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/fragEj3_input_placeholder"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btnTransformar" />

    </LinearLayout>

</FrameLayout>